Paths.get replaced with Path.of.